# sukoshidbg

./: CMakeLists.txt  main.cpp
include/libsukoshi/: libsukoshi.h
src/: CMakeLists.txt  libsukoshi.cpp
tools/: CMakeLists.txt  sukoshi.cpp
